--- a/frontpedidos/motoboy/style.css
+++ b/frontpedidos/motoboy/style.css
@@ -47,6 +47,20 @@ td {
     color: var(--cor-quaternaria);
 }
 
+td button{
+    background-color: var(--cor-primaria);
+    color: var(--cor-quintenaria);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    border: none;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: large;
+    cursor: pointer;
+}
+
 .item{
     background-color: var(--cor-primaria);
     font-weight: bold;
@@ -59,6 +73,45 @@ td {
 .oculto {
     display: none;
 }
+
+
+.modal {
+    display: none; /* Comece oculto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fundo semi-transparente */
+    z-index: 1;
+    gap: 10px;
+    margin: 10px;
+}
+
+.modal-content {
+    background-color: var(--cor-primaria); /* Cor de fundo */
+    width: 200px;
+    height: 300px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    color: var(--cor-quaternaria); /* Cor do texto */
+}
+
+/* Estilo do botão de fechar */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: var(--cor-quaternaria); /* Cor do ícone */
+    font-size: 20px;
+}
+
+
 
 @media(max-width: 800px) {
     th {
